<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:configChanges="orientation|screenSize">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_lottery_info"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_lottery_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/lottery_code"
                        android:inputType="number"
                        android:gravity="bottom|center"
                        android:textSize="20dp"
                        android:maxLength="6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_lottery_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lottery_date"
                        android:inputType="date"
                        android:gravity="bottom|center"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>
            <AutoCompleteTextView
                android:id="@+id/tv_lottery_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lottery_company_name"
                android:textSize="20dp"
                android:inputType="text"/>
            <ProgressBar
                android:id="@+id/prb_loading_form"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateOnly="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/check"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:id="@+id/btn_check"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/auto_fill"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:id="@+id/btn_autofill"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>