<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/my_card_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1.5">
                <ImageView
                    android:id="@+id/iv_my_lottery_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/noimage"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccent"
                            android:id="@+id/btn_take_image"
                            android:textColor="#FFFFFF"
                            android:text="@string/take_image"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:id="@+id/btn_load_image"
                            android:textColor="#FFFFFF"
                            android:text="@string/load_image"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ProgressBar
                        android:id="@+id/prb_loading_form_1"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:indeterminateOnly="true"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/my_card_margin"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/et_lottery_code"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/lottery_code"
                                    android:inputType="number"
                                    android:gravity="bottom|center"
                                    android:textSize="15sp"
                                    android:maxLength="6" />
                            </android.support.design.widget.TextInputLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/et_lottery_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/lottery_date"
                                    android:inputType="date"
                                    android:gravity="bottom|center"
                                    android:textSize="15sp" />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/my_card_margin"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/tv_lottery_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:hint="@string/lottery_company_name"
                            android:textSize="15sp"/>

                    </LinearLayout>
                    <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_margin="@dimen/my_card_margin"-->
                    <!--android:orientation="horizontal">-->

                        <!--<TextView-->
                            <!--android:id="@+id/tv_test_sb"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="match_parent"-->
                            <!--android:textColor="#000000"-->
                            <!--android:textSize="10sp"/>-->

                    <!--</LinearLayout>-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/btn_use_info"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#FF0000"
                                android:textColor="#FFFFFF"
                                android:text="@string/use_info"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/btn_back_home"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#00FF00"
                                android:textColor="#FFFFFF"
                                android:text="@string/back_home"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>